# python-pymissive

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-email.txt  requirements-quality.txt  requirements-scaleway.txt  service.py
django-pymissive/: .editorconfig  .gitattributes  LICENSE  README.md  env.example  manage.py  pyproject.toml
django-pymissive/.github/workflows/: ci.yml
django-pymissive/src/django_pymissive/: __init__.py  apps.py  fields.py  pdf.py  translation_catalog.py  urls.py  utils.py
django-pymissive/src/django_pymissive/admin/: __init__.py  attachment.py  campaign.py  config.py  document.py  event.py  missive.py  provider.py  recipient.py  related_object.py  service.py  webhook.py
django-pymissive/src/django_pymissive/forms/: __init__.py  webhook.py
django-pymissive/src/django_pymissive/locale/fr/LC_MESSAGES/: django.mo  django.po
django-pymissive/src/django_pymissive/management/commands/: create_missive_dataset.py  update_translation_catalog.py
django-pymissive/src/django_pymissive/managers/: __init__.py  attachment.py  campaign.py  document.py  event.py  missive.py  provider.py  recipient.py  related_object.py  webhook.py
django-pymissive/src/django_pymissive/migrations/: 0001_initial.py  0002_alter_missivebaseattachment_attachment_file.py
django-pymissive/src/django_pymissive/models/: __init__.py  attachment.py  base.py  campaign.py  choices.py  config.py  document.py  event.py  missive.py  provider.py  recipient.py  related_object.py  service.py  webhook.py
django-pymissive/src/django_pymissive/static/django_pymissive/css/: base_preview.css  email_preview.css  postal_preview.css  sms_preview.css
django-pymissive/src/django_pymissive/task/: __init__.py  base.py  campaign.py  celery.py  django_rq.py  events.py  sync.py  thread.py
django-pymissive/src/django_pymissive/templates/django_pymissive/: base_preview.html  email_preview.html  postal_preview.html  sms_preview.html
django-pymissive/src/django_pymissive/views/: __init__.py  attachment.py  campaign.py  document.py  missive.py  preview.py  webhook.py
django-pymissive/tests/: __init__.py  settings.py  urls.py
docs/: AI.md  README.md  development.md  purpose.md  structure.md
python-pymissive/: README.md  env.example  pyproject.toml
python-pymissive/docs/: AI.md  README.md
python-pymissive/src/pymissive/: .commands.json  __init__.py  config.py
python-pymissive/src/pymissive/archives/: address.py  missive.py  partner_old copy.py
python-pymissive/src/pymissive/archives/address_backends/: geoapify.py  here.py  mapbox.py  maps_co.py
python-pymissive/src/pymissive/archives/providers/: brevo.py  certeurope.py  django_email.py  laposte.py  messenger.py  notification.py  ses.py  signal.py  slack.py  teams.py
python-pymissive/src/pymissive/archives/providers/base/: __init__.py  branded.py  email.py  email_message.py  postal.py  sms.py  voice_call.py
python-pymissive/src/pymissive/providers/: apn.py  ar24.py  brevo.py  laposte.py  maileva.py  mailgun.py  messenger.py  notification.py  partner.py  scaleway.py  signal.py  slack.py  smtp.py  telegram.py  twilio.py  vonage.py
python-pymissive/src/pymissive/providers/base/: attachments.py  branded.py  email.py  notification.py  sms.py  voice_call.py
src/pymissive/: __init__.py  config.py  countries.csv
src/pymissive/archives/: __init__.py  address.py  helpers.py  sender.py  status.py
src/pymissive/archives/address_backends/: __init__.py  base.py  geocode_earth.py  google_maps.py  locationiq.py  nominatim.py  opencage.py  pelias_mixin.py  photon.py
src/pymissive/archives/providers/: __init__.py  apn.py  ar24.py  fcm.py  laposte.py  maileva.py  mailgun.py  notification.py  sendgrid.py  smspartner.py  smtp.py  telegram.py  twilio.py  vonage.py
src/pymissive/archives/providers/base/: _attachments.py  common.py  monitoring.py  notification.py  postal_defaults.py
src/pymissive/providers/: apn.py  ar24.py  brevo.py  certeurope.py  django_email.py  fcm.py  laposte.py  maileva.py  mailgun.py  messenger.py  notification.py  partner.py  scaleway.py  sendgrid.py  ses.py  signal.py  slack.py  smspartner.py  smtp.py  teams.py  telegram.py  twilio.py  vonage.py
src/pymissive/providers/base/: __init__.py  acknowledgement.py  branded.py  postal.py
